[tool.poetry]
name = "ece343-assesment-ch03a"
version = "0.1.0"
description = ""
authors = ["Ethan Chapman <ethan.chapman0@outlook.com>"]
readme = "README.md"
packages = [{include = "ece343_assesment_ch03a"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
